[gd_scene load_steps=11 format=3 uid="uid://cgp5ya7476jhl"]

[ext_resource type="Script" path="res://Scenes/enemyB.gd" id="1_jleit"]
[ext_resource type="PackedScene" uid="uid://4ywq78bd5jeq" path="res://Scenes/hitbox_component.tscn" id="4_jbm3t"]
[ext_resource type="PackedScene" uid="uid://bf474opo8ok5n" path="res://Models/EnemigoB/enemigo.tscn" id="4_sr5ws"]
[ext_resource type="PackedScene" uid="uid://b5qkfw2ey3r5l" path="res://Scenes/health_component.tscn" id="5_aofl7"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_oxogx"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_cesw0"]
radius = 0.632933
height = 2.20622

[sub_resource type="Animation" id="Animation_8imip"]
length = 0.001

[sub_resource type="Animation" id="Animation_w2obm"]
resource_name = "attack"
length = 0.5

[sub_resource type="Animation" id="Animation_wpq0n"]
resource_name = "idle_enemy"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tnuxh"]
_data = {
"RESET": SubResource("Animation_8imip"),
"attack": SubResource("Animation_w2obm"),
"idle_enemy": SubResource("Animation_wpq0n")
}

[node name="Enemy" type="CharacterBody3D" groups=["enemy"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.944042, 0)
collision_layer = 255
collision_mask = 255
wall_min_slide_angle = 0.698132
script = ExtResource("1_jleit")
knockback_modifier = 2.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_oxogx")

[node name="HitboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("4_jbm3t")]
health_component = NodePath("../HealthComponent")

[node name="CollisionShape3D" type="CollisionShape3D" parent="HitboxComponent"]
shape = SubResource("CapsuleShape3D_cesw0")

[node name="HealthComponent" parent="." instance=ExtResource("5_aofl7")]

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
unique_name_in_owner = true
target_desired_distance = 5.0

[node name="AnimationEnemy" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_tnuxh")
}
autoplay = "idle_enemy"

[node name="Enemigo" parent="." instance=ExtResource("4_sr5ws")]

[node name="RayCast3D" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.644555, 0)
target_position = Vector3(0, 0, -3)

[connection signal="area_entered" from="HitboxComponent" to="." method="_on_hitbox_component_area_entered"]
[connection signal="target_reached" from="NavigationAgent3D" to="." method="_on_navigation_agent_3d_target_reached"]
[connection signal="animation_finished" from="AnimationEnemy" to="." method="_on_animation_enemy_animation_finished"]
[connection signal="visibility_changed" from="RayCast3D" to="." method="_on_ray_cast_3d_visibility_changed"]
